<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtId"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_Id"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/txtName"
            android:layout_width="95sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtName" />

        <TextView
            android:id="@+id/txtRa"
            android:layout_width="35sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtRa" />

        <TextView
            android:id="@+id/txtCurso"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtCurso" />

        <ImageButton
            android:id="@+id/idBtnEdit"
            android:layout_width="15sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_edit_24dp"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/idBtnDelete"
            android:layout_width="15sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_delete_24dp" />

    </LinearLayout>

</LinearLayout>